--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -77,6 +77,17 @@
 // THUMB ZOOMER
 // ------------
 
+.zoomable-thumb-container {
+    width: 50px;
+    height: 32px;
+	line-height: 32px;
+	display: inline-block;
+	text-align: center;
+	vertical-align: middle;
+
+	> img { max-height: 100%; max-width: 100%; }
+}
+
 .zoomable-thumb {
     max-width: 50px;
     max-height: 32px;
@@ -84,6 +95,7 @@
 
 .zoomable-thumb-clone {
     border: 1px solid #bbb;
+	background-color: #fff;
 }
 
 // MORE RESET
