--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Document.cshtml
@@ -16,6 +16,7 @@
     // add css assets
     Html.AppendCssFileParts(
         cssRoot + "font-awesome.css",
+        cssRoot + "jquery.bootstrap-touchspin.css",
         cssRoot + "jquery.pnotify.default.css",
         cssRoot + "jquery.pnotify.default.icons.css");
 
@@ -73,6 +74,7 @@
         jsRoot + "smartstore.shrinkmenu.js",
         jsRoot + "smartstore.scrollbutton.js",
         jsRoot + "jquery.pnotify.js",
+        jsRoot + "jquery.bootstrap-touchspin.js",
         jsRoot + "jquery.scrollTo.js",
         jsRoot + "jquery.serialScroll.js",
         jsRoot + "smartstore.globalize.adapter.js",
