--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/_footer.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/_footer.scss
@@ -22,14 +22,44 @@
     }
 }
 .footer-social {
+    padding-bottom: 2rem;
+
     a {
-        color: #0275d8;
+        color: #888 !important;
+        
+        &.brand-facebook:hover {
+            color: $clr-brand-facebook !important;
+        }
+
+        &.brand-googleplus:hover {
+            color: $clr-brand-googleplus !important;
+        }
+        &.brand-twitter:hover {
+            color: $clr-brand-twitter !important;
+        }
+        &.brand-pinterest:hover {
+            color: $clr-brand-pinterest !important;
+        }
+        &.brand-youtube:hover {
+            color: $clr-brand-youtube !important;
+        }
     }
-    padding-bottom: 1.5em;
+    
+    .fa-stack {
+        width: 3rem;
+        height: 3rem;
+    }
+    .fa-stack-2x {
+        font-size: 3rem;
+    }
+    .fa-stack-1x {
+        padding-top: .2rem;
+        font-size: 1.5rem;
+    }
 }
 
 .footer-disclaimer {
     border-top: 1px solid #bbb;
-    padding: 2em 0;
-    margin-top: 2em;
+    padding: 2rem 0;
+    margin-top: 2rem;
 }
