--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/Menu.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/Menu.cshtml
@@ -7,7 +7,7 @@
 
 @Html.Widget("header_menu_before")
 
-<div class="menubar">
+<nav class="menubar">
     <nav class="menubar-group pull-left m-l-0">
         @Html.Action("LanguageSelector", "Common")
         @Html.Action("CurrencySelector", "Common")
@@ -22,17 +22,20 @@
         }
 
         <div class="dropdown service-links">
-            <a class="menubar-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Hilfe &amp; Service &nbsp;<i class="fa fa-caret-down"></i></a>
+            <a class="menubar-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
+                @*TODO NewAlpha: add resource *@
+                Hilfe &amp; Service &nbsp;
+                <i class="fa fa-caret-down"></i>
+            </a>
 
             <div class="dropdown-menu" aria-labelledby="dLabel">
-                @Html.Action("InfoBlock", "Common", new { area = "" })
+                @Html.Action("ServiceMenu", "Common", new { area = "" })
             </div>
         </div>
 
         @*
             TODO?
             PrivateMessages
-            RecentlyAddedProducts
         *@
 
 
@@ -71,6 +74,31 @@
                 @T("Forum.Forums")
             </a>
         }
+    </nav>
+
+    <nav class="menubar-group">
+        <div class="dropdown">
+            <a class="menubar-link" @(Model.IsAuthenticated ? "data-toggle=dropdown" : "") aria-haspopup="true" aria-expanded="false" href="@accountUrl" rel="nofollow">
+
+                <i class="fa fa-user"></i>&nbsp;&nbsp;
+
+                @if (Model.IsAuthenticated)
+                {
+                    @T("Account.MyAccount")
+                    <i class="fa fa-caret-down"></i>
+                }
+                else
+                {
+                    @T("Account.Login")
+                }
+            </a>
+
+            @if (Model.IsAuthenticated)
+            {
+                @Html.Action("AccountDropdown", "Common")
+            }
+        </div>
+
     </nav>
 
     @if (Model.DisplayAdminLink)
