--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/OrderSummary.cshtml
@@ -8,8 +8,37 @@
     <tr class="cart-item-row">
 		@if (Model.IsEditable)
 		{
-			<td class="remove">
-				<input type="checkbox" name="removefromcart" value="@(item.Id)" />
+			<td class="remove text-xs-center">
+                <a class="remove ajax-cart-link btn btn-secondary btn-sm"
+                   href="#"
+                   rel="nofollow"
+                   data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })'
+                   data-name="@item.ProductName"
+                   data-type="cart"
+                   data-action="remove"
+                   title='@T("Common.Remove")'>
+                    <i class="fa fa-trash-o m-r-0"></i>
+                </a>
+
+                <script type="text/javascript">
+                    //TODO NewAlpha: implement smooth animation and relocate script
+                    $(".ajax-cart-link").click(function () {
+
+                        //if there is more then one line
+                        if ($(".product-body[style!='display: none;']").length > 1)
+                        {
+                            var itemLine = $(this).closest(".product-body");
+                            //$(itemLine, "td").wrapInner('<div style="display:inline" />').slideUp();
+                            itemLine.slideUp();
+                        }
+                        else 
+                        {
+                            //reload page
+                            location.reload();
+                        }
+                    });
+                </script>
+
 			</td>
 		}
 		@if (Model.ShowSku)
@@ -39,7 +68,7 @@
 
             @if (Model.DisplayBasePrice && !String.IsNullOrEmpty(item.BasePrice))
             {
-                <div class="base-price text-muted">
+                <div class="base-price text-muted text-smaller">
                     @item.BasePrice
                 </div>
             }
@@ -55,7 +84,7 @@
 
 			@if (!String.IsNullOrEmpty(item.AttributeInfo))
 			{
-				<div class="attributes text-muted">
+				<div class="attributes text-muted text-smaller">
 					@Html.Raw(item.AttributeInfo)
 				</div>
 			}
@@ -107,7 +136,7 @@
 		<td class="unit-price text-nowrap">
 			<span class="product-unit-price">@item.UnitPrice</span>
 		</td>
-		<td class="text-nowrap">
+		<td class="text-nowrap" style="width:170px">
 			@if (Model.IsEditable)
 			{
 				if (item.AllowedQuantities.Count > 0)
@@ -121,11 +150,22 @@
 				}
 				else
 				{
-                    <input name="itemquantity@(item.Id)" type="text" value="@(item.Quantity)" class="qty-input text-xs-right form-control" />   
-				}
-			}
-			else
-			{
+                    <input id="qty-input-@(item.Id)" name="itemquantity@(item.Id)" type="text" value="@(item.Quantity)" class="qty-input text-xs-right form-control" />   
+
+                    <script type="text/javascript">
+                        $(function () {
+                            //TODO NewAlpha: implement step in admin product detail
+                            $("#qty-input-@(item.Id)").TouchSpin({
+                                min: @item.MinOrderAmount,
+                                max: @item.MaxOrderAmount,
+                                step: 1
+                            });
+                        });
+                    </script>
+                }
+            }
+            else
+            {
 				<span>@item.Quantity</span>
 			}
             <span class="measure-unit">@item.QuantityUnit</span>
@@ -289,9 +329,9 @@
 
     @if (!String.IsNullOrEmpty(Model.CheckoutAttributeInfo))
     {
-    <div class="selected-checkout-attributes well well-small" style="text-align: left">
-        @Html.Raw(Model.CheckoutAttributeInfo)
-    </div>
+        <div class="selected-checkout-attributes card card-block text-xs-left">
+            @Html.Raw(Model.CheckoutAttributeInfo)
+        </div>
     }
 
 	@if (Model.Items.Count > 0)
