--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/_CheckoutAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/_CheckoutAttributes.cshtml
@@ -3,7 +3,7 @@
 @if (Model.Count > 0)
 {
     
-    <div class="checkout-attributes well well-small">
+    <div class="checkout-attributes card card-block">
 
         <div class="form-vertical">
             @foreach (var attribute in Model)
