--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Document.cshtml
@@ -78,10 +78,13 @@
         jsRoot + "jquery.scrollTo.js",
         jsRoot + "jquery.serialScroll.js",
         jsRoot + "smartstore.globalize.adapter.js",
+        jsRoot + "offcanvas.js",
+
         // Shop
         jsRoot + "public.common.js",
         jsRoot + "public.ajaxcart.js",
-        jsRoot + "public.shopbar.js",
+        //jsRoot + "public.shopbar.js",
+        jsRoot + "public.offcanvas-cart.js",
         jsRoot + "public.product-list-scroller.js",
         jsRoot + "public.product-filter.js");
 }
