--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/ShopBar.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/ShopBar.cshtml
@@ -21,99 +21,99 @@
 
 	<!-- TOOLS -->
 	<div class="shopbar-col shopbar-tools">
-		<!-- Tool "Wishlist" -->
+
 		@if (Model.WishlistEnabled)
-		{
-			<div class="shopbar-divider" hidden></div>
-			<div class="shopbar-tool" id="shopbar-wishlist">
-				<a class="shopbar-button" data-target="shopbar-flyout-wishlist" href="@Url.RouteUrl("Wishlist")" data-summary-href='@Url.Action("ShoppingCartSummary", "ShoppingCart", new { isWishlist = true })'>
-					<figure class="shopbar-button-icon">
-						<i class="fa fa-heart-o"></i>
-						<span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.WishlistItems == 0 ? "hidden-xs-up" : "")' data-bind-to="TotalProducts">@Model.WishlistItems</span>
-					</figure>
-					<span class="shopbar-button-label">
-						<span>@T("Common.Shopbar.WishlistPartOne")</span><br />
-						<span style="font-weight: bold">@T("Common.Shopbar.WishlistPartTwo") <i class="fa fa-caret-down"></i></span>
-					</span>
-					<span class="sm-arrow"></span>
-				</a>
-				<div class="shopbar-flyout shopbar-flyout--right" id="shopbar-flyout-wishlist" data-href='@Url.Action("FlyoutWishlist", "ShoppingCart")'>
-					@*@Html.Action("WishlistDropdown", "ShoppingCart")*@
-				</div>
-			</div>
-		}
+        {
+            //Tablet & Desktop >sm
+            <div class="shopbar-tool hidden-sm-down" id="shopbar-wishlist" data-target="#wishlist-tab">
+                <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("ShoppingCartSummary", "ShoppingCart", new { isWishlist = true })"
+                   data-autohide="true" data-placement="right" data-fullscreen="false" data-disablescrolling="true" data-target="#offcanvas-cart">
+                    <figure class="shopbar-button-icon">
+                        <i class="fa fa-heart-o"></i>
+                        <span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.WishlistItems == 0 ? "hidden-xs-up" : "")' data-bind-to="TotalProducts">@Model.WishlistItems</span>
+                    </figure>
+                    <span class="shopbar-button-label hidden-md-down">
+                        <span>@T("Common.Shopbar.WishlistPartOne")</span><br />
+                        <span style="font-weight: bold">@T("Common.Shopbar.WishlistPartTwo")</span>
+                    </span>
+                </a>
+            </div>
 
-		<!-- Tool "Compare" -->
+            //Handy
+            <div class="shopbar-tool hidden-sm-up" id="shopbar-wishlist" data-target="#wishlist-tab">
+                <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("ShoppingCartSummary", "ShoppingCart", new { isWishlist = true })"
+                   data-autohide="true" data-placement="right" data-fullscreen="true" data-disablescrolling="true" data-target="#offcanvas-cart">
+                    <figure class="shopbar-button-icon">
+                        <i class="fa fa-heart-o"></i>
+                        <span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.WishlistItems == 0 ? "hidden-xs-up" : "")' data-bind-to="TotalProducts">@Model.WishlistItems</span>
+                    </figure>
+                </a>
+            </div>
+        }
+
+        <div class="shopbar-divider" hidden></div>
+
+
 		@if (Model.CompareProductsEnabled)
-		{
-			<div class="shopbar-divider" hidden></div>
-			<div class="shopbar-tool" id="shopbar-compare">
-				<a class="shopbar-button" data-target="shopbar-flyout-compare" href="@Url.Action("CompareProducts", "Catalog")" data-summary-href='@Url.Action("CompareSummary", "Catalog")'>
-					<figure class="shopbar-button-icon">
-						<i class="fa fa-retweet"></i>
-						<span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.CompareItems == 0 ? "hidden-xs-up" : "")' data-bind-to="Count">@Model.CompareItems</span>
-					</figure>
-					<span class="shopbar-button-label">
-						<span>@T("Common.Shopbar.CompareProductsPartOne")</span><br />
-						<span style="font-weight: bold">@T("Common.Shopbar.CompareProductsPartTwo") <i class="fa fa-caret-down"></i></span>
-					</span>
-					<span class="sm-arrow"></span>
-				</a>
-				<div class="shopbar-flyout shopbar-flyout--right" id="shopbar-flyout-compare" data-href='@Url.Action("FlyoutCompare", "Catalog")'>
-					@*@Html.Action("CompareDropdown", "Catalog")*@
-				</div>
-			</div>
-		}
+        {
+            //Tablet & Desktop >sm
+            <div class="shopbar-tool hidden-sm-down" id="shopbar-compare" data-target="#compare-tab">
+                <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("CompareSummary", "Catalog")"
+                   data-autohide="true" data-placement="right" data-fullscreen="false" data-disablescrolling="true" data-target="#offcanvas-cart">
+                    <figure class="shopbar-button-icon">
+                        <i class="fa fa-retweet"></i>
+                        <span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.CompareItems == 0 ? "hidden-xs-up" : "")' data-bind-to="Count">@Model.CompareItems</span>
+                    </figure>
+                    <span class="shopbar-button-label hidden-md-down">
+                        <span>@T("Common.Shopbar.CompareProductsPartOne")</span><br />
+                        <span style="font-weight: bold">@T("Common.Shopbar.CompareProductsPartTwo")</span>
+                    </span>
+                </a>
+            </div>
 
-		<!-- Tool "Account" -->
-		@*<div class="shopbar-tool loaded" id="shopbar-account">
-			<a class='shopbar-button@(!Model.IsAuthenticated ? " no-drop" : "")' data-target="shopbar-flyout-account" href="@accountUrl" rel="nofollow">
-				<figure class="shopbar-button-icon">
-					<i class="fa fa-user"></i>
-				</figure>
-				<span class="shopbar-button-label" xhidden>
-					@if (Model.IsAuthenticated)
-					{
-						<span>@Model.CustomerEmailUsername</span><br />
-						<span style="font-weight: bold">
-							@T("Account.MyAccount")
-							<i class="fa fa-caret-down"></i>
-						</span>
-					}
-					else
-					{
-						<span>@T("Common.Shopbar.GuestGreeting")</span><br />
-						<span style="font-weight: bold">@T("Account.Login")</span>
-					}
-				</span>
-				<span class="sm-arrow"></span>
-			</a>
+            //Handy
+            <div class="shopbar-tool hidden-sm-up" id="shopbar-compare" data-target="#compare-tab">
+                <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("CompareSummary", "Catalog")"
+                   data-autohide="true" data-placement="right" data-fullscreen="true" data-disablescrolling="true" data-target="#offcanvas-cart">
+                    <figure class="shopbar-button-icon">
+                        <i class="fa fa-retweet"></i>
+                        <span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.CompareItems == 0 ? "hidden-xs-up" : "")' data-bind-to="Count">@Model.CompareItems</span>
+                    </figure>
+                </a>
+            </div>
+        }
 
-			@if (Model.IsAuthenticated)
-			{
-				@Html.Action("AccountDropdown", "Common")
-			}
-		</div>*@
-
-		<!-- Tool "Cart" -->
 		@if (Model.ShoppingCartEnabled)
-		{	
-			<div class="shopbar-tool" id="shopbar-cart">
-				<a class="shopbar-button" data-target="shopbar-flyout-cart" href="@Url.RouteUrl("ShoppingCart")" data-summary-href='@Url.Action("ShoppingCartSummary", "ShoppingCart")'>
-					<figure class="shopbar-button-icon">
-						<i class="fa fa-shopping-basket"></i>
-						<span class='label label-pill @(GetThemeVariable<string>("ShopBarLabel"))@(Model.ShoppingCartItems == 0 ? " hidden-xs-up" : "")' data-bind-to="TotalProducts">@Model.ShoppingCartItems</span>
-					</figure>
-					<span class="shopbar-button-label">
-						<span data-bind-to="SubTotal">@Model.ShoppingCartAmount</span><br />
-						<span style="font-weight: bold">@T("Common.Shopbar.Basket") <i class="fa fa-caret-down"></i></span>
-					</span>
-					<span class="sm-arrow"></span>
-				</a>
-				<div class="shopbar-flyout shopbar-flyout--right" id="shopbar-flyout-cart" data-href='@Url.Action("FlyoutShoppingCart", "ShoppingCart")'>
-					@*@Html.Action("FlyoutShoppingCart", "ShoppingCart")*@
-				</div>
-			</div>
-		}
-	</div>
+        {
+            //Tablet & Desktop >sm
+            <div class="shopbar-tool hidden-sm-down" id="shopbar-cart" data-target="#cart-tab">
+                <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("ShoppingCartSummary", "ShoppingCart")"
+                        data-autohide="true" data-placement="right" data-fullscreen="false" data-disablescrolling="true" data-target="#offcanvas-cart">
+                    <figure class="shopbar-button-icon">
+                        <i class="fa fa-shopping-basket"></i>
+                        <span class='label label-pill @(GetThemeVariable<string>("ShopBarLabel"))@(Model.ShoppingCartItems == 0 ? " hidden-xs-up" : "")' data-bind-to="TotalProducts">
+                            @Model.ShoppingCartItems
+                        </span>
+                    </figure>
+                    <span class="shopbar-button-label hidden-md-down">
+                        <span data-bind-to="SubTotal">@Model.ShoppingCartAmount</span><br />
+                        <span style="font-weight: bold">@T("Common.Shopbar.Basket") <i class="fa fa-caret-down"></i></span>
+                    </span>
+                </a>
+            </div>
+
+            //Handy
+            <div class="shopbar-tool hidden-sm-up" id="shopbar-cart" data-target="#cart-tab">
+                <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("ShoppingCartSummary", "ShoppingCart")"
+                   data-autohide="true" data-placement="right" data-fullscreen="true" data-disablescrolling="true" data-target="#offcanvas-cart">
+                    <figure class="shopbar-button-icon">
+                        <i class="fa fa-shopping-basket"></i>
+                        <span class='label label-pill @(GetThemeVariable<string>("ShopBarLabel"))@(Model.ShoppingCartItems == 0 ? " hidden-xs-up" : "")' data-bind-to="TotalProducts">
+                            @Model.ShoppingCartItems
+                        </span>
+                    </figure>
+                </a>
+            </div>
+        }
+    </div>
 </div>
