--- a/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWallScripting.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWallScripting.cshtml
@@ -1,4 +1,5 @@
-﻿@using SmartStore.PayPal.Models;
+﻿@using SmartStore.PayPal
+@using SmartStore.PayPal.Models
 @model PayPalPlusCheckoutModel
 <script src="https://www.paypalobjects.com/webstatic/ppplus/ppplus.min.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -54,7 +55,20 @@
 		// next button clicked
 		$('#PayPalPlusNextCheckoutStep').click(function (e) {
 			e.preventDefault();
-			PAYPAL.apps.PPP.doCheckout();
+
+			// patch shipping data
+			$({}).doAjax({
+				type: 'POST',
+				url: '@Url.Action("PatchShipping", "PayPalPlus", new { area = Plugin.SystemName })',
+				callbackSuccess: function (resp) {
+					if (resp.success) {
+						PAYPAL.apps.PPP.doCheckout();
+					}
+					else {
+						window.displayNotification(resp.error, 'error');
+					}
+				}
+			});
 			return false;
 		});
 
