--- a/src/Plugins/SmartStore.DevTools/Views/DevTools/Configure.cshtml
+++ b/src/Plugins/SmartStore.DevTools/Views/DevTools/Configure.cshtml
@@ -26,6 +26,15 @@
         </tr>
 		<tr>
 			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.DisplayMachineName)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.DisplayMachineName)
+				@Html.ValidationMessageFor(model => model.DisplayMachineName)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
 				&nbsp;
 			</td>
 			<td class="adminData">
