--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Document.cshtml
@@ -79,6 +79,7 @@
         jsRoot + "jquery.serialScroll.js",
         jsRoot + "smartstore.globalize.adapter.js",
         jsRoot + "offcanvas.js",
+        jsRoot + "hammer.js",
 
         // Shop
         jsRoot + "public.common.js",
