--- a/src/Presentation/SmartStore.Web/Views/Product/RelatedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/RelatedProducts.cshtml
@@ -12,7 +12,7 @@
                 <div class="pl-row row">
                 @foreach (var item in Model)
                 {
-                    <article class="item-box product-compact span4 equalized-column" data-equalized-deep="true">
+                    <article class="item-box product-compact equalized-column" data-equalized-deep="true">
                         @Html.Partial("_ProductBoxCompact", item)
                     </article>
                 }
